[package]
name = "RustDAC"
version = "0.1.0"
edition = "2024"

[dependencies]
aec3 = "0.1.2"
anyhow = "1.0.100"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
ratatui = "0.30.0"
sysinfo = "0.38.2"
wasapi = "0.22.0"
windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_Devices_Properties", "Win32_UI_Shell_PropertiesSystem", "Win32_Storage_FileSystem"] }
